hammer: redirect balanced reads to acting primary when necessary

Redirect balanced read requests to acting primary when the
targeting object hasn't been recovered on replica OSDs.

Fixes: http://tracker.ceph.com/issues/17968
Signed-off-by: Xuehan Xu <xxhdx1985126@163.com>